--- a/src/br/com/brunotonia/Principal.form
+++ b/src/br/com/brunotonia/Principal.form
@@ -94,7 +94,7 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jScrollPane2" min="-2" pref="142" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="jSeparator4" pref="434" max="32767" attributes="0"/>
+                  <Component id="jSeparator4" max="32767" attributes="0"/>
               </Group>
           </Group>
       </Group>
